source/RK_frontend/ANTLR4-generated/MathGrammarParser.cpp

#include "stdafx.h"
#include "../RK_frontend/lang/Calculatables.h"
#include <vector>


// Generated from cpp/MathGrammar.g4 by ANTLR 4.7


#include "MathGrammarListener.h"

#include "MathGrammarParser.h"


using namespace antlrcpp;
using namespace antlr4_generated;
using namespace antlr4;

MathGrammarParser::MathGrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MathGrammarParser::~MathGrammarParser() {
  delete _interpreter;
}

std::string MathGrammarParser::getGrammarFileName() const {
  return "MathGrammar.g4";
}

const std::vector<std::string>& MathGrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MathGrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

MathGrammarParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MathGrammarParser::Opt_WSContext *> MathGrammarParser::RootContext::opt_WS() {
  return getRuleContexts<MathGrammarParser::Opt_WSContext>();
}

MathGrammarParser::Opt_WSContext* MathGrammarParser::RootContext::opt_WS(size_t i) {
  return getRuleContext<MathGrammarParser::Opt_WSContext>(i);
}

tree::TerminalNode* MathGrammarParser::RootContext::EOF() {
  return getToken(MathGrammarParser::EOF, 0);
}

MathGrammarParser::Real_expressionContext* MathGrammarParser::RootContext::real_expression() {
  return getRuleContext<MathGrammarParser::Real_expressionContext>(0);
}

MathGrammarParser::Bool_expressionContext* MathGrammarParser::RootContext::bool_expression() {
  return getRuleContext<MathGrammarParser::Bool_expressionContext>(0);
}


size_t MathGrammarParser::RootContext::getRuleIndex() const {
  return MathGrammarParser::RuleRoot;
}

void MathGrammarParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void MathGrammarParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}

MathGrammarParser::RootContext* MathGrammarParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, MathGrammarParser::RuleRoot);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    opt_WS();
    setState(37);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(31);
      dynamic_cast<RootContext *>(_localctx)->real_expressionContext = real_expression();
       dynamic_cast<RootContext *>(_localctx)->node =  dynamic_cast<RootContext *>(_localctx)->real_expressionContext->node; dynamic_cast<RootContext *>(_localctx)->type =  lang::ExpressionType::Double; 
      break;
    }

    case 2: {
      setState(34);
      dynamic_cast<RootContext *>(_localctx)->bool_expressionContext = bool_expression();
       dynamic_cast<RootContext *>(_localctx)->node =  dynamic_cast<RootContext *>(_localctx)->bool_expressionContext->node; dynamic_cast<RootContext *>(_localctx)->type =  lang::ExpressionType::Bool; 
      break;
    }

    }
    setState(39);
    opt_WS();
    setState(40);
    match(MathGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bool_expressionContext ------------------------------------------------------------------

MathGrammarParser::Bool_expressionContext::Bool_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MathGrammarParser::Bool_atomContext *> MathGrammarParser::Bool_expressionContext::bool_atom() {
  return getRuleContexts<MathGrammarParser::Bool_atomContext>();
}

MathGrammarParser::Bool_atomContext* MathGrammarParser::Bool_expressionContext::bool_atom(size_t i) {
  return getRuleContext<MathGrammarParser::Bool_atomContext>(i);
}

std::vector<MathGrammarParser::Opt_WSContext *> MathGrammarParser::Bool_expressionContext::opt_WS() {
  return getRuleContexts<MathGrammarParser::Opt_WSContext>();
}

MathGrammarParser::Opt_WSContext* MathGrammarParser::Bool_expressionContext::opt_WS(size_t i) {
  return getRuleContext<MathGrammarParser::Opt_WSContext>(i);
}

std::vector<tree::TerminalNode *> MathGrammarParser::Bool_expressionContext::AND() {
  return getTokens(MathGrammarParser::AND);
}

tree::TerminalNode* MathGrammarParser::Bool_expressionContext::AND(size_t i) {
  return getToken(MathGrammarParser::AND, i);
}

std::vector<tree::TerminalNode *> MathGrammarParser::Bool_expressionContext::OR() {
  return getTokens(MathGrammarParser::OR);
}

tree::TerminalNode* MathGrammarParser::Bool_expressionContext::OR(size_t i) {
  return getToken(MathGrammarParser::OR, i);
}


size_t MathGrammarParser::Bool_expressionContext::getRuleIndex() const {
  return MathGrammarParser::RuleBool_expression;
}

void MathGrammarParser::Bool_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBool_expression(this);
}

void MathGrammarParser::Bool_expressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBool_expression(this);
}

MathGrammarParser::Bool_expressionContext* MathGrammarParser::bool_expression() {
  Bool_expressionContext *_localctx = _tracker.createInstance<Bool_expressionContext>(_ctx, getState());
  enterRule(_localctx, 2, MathGrammarParser::RuleBool_expression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(42);
    dynamic_cast<Bool_expressionContext *>(_localctx)->first = bool_atom();
     dynamic_cast<Bool_expressionContext *>(_localctx)->node =  dynamic_cast<Bool_expressionContext *>(_localctx)->first->node; 
    setState(58);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(56);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          setState(44);
          opt_WS();
          setState(45);
          match(MathGrammarParser::AND);
          setState(46);
          opt_WS();
          setState(47);
          dynamic_cast<Bool_expressionContext *>(_localctx)->next = bool_atom();
           dynamic_cast<Bool_expressionContext *>(_localctx)->node =  new lang::OperatorAnd(_localctx->node, dynamic_cast<Bool_expressionContext *>(_localctx)->next->node); 
          break;
        }

        case 2: {
          setState(50);
          opt_WS();
          setState(51);
          match(MathGrammarParser::OR);
          setState(52);
          opt_WS();
          setState(53);
          dynamic_cast<Bool_expressionContext *>(_localctx)->next = bool_atom();
           dynamic_cast<Bool_expressionContext *>(_localctx)->node =  new lang::OperatorOr (_localctx->node, dynamic_cast<Bool_expressionContext *>(_localctx)->next->node); 
          break;
        }

        } 
      }
      setState(60);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bool_atomContext ------------------------------------------------------------------

MathGrammarParser::Bool_atomContext::Bool_atomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MathGrammarParser::ComparisonContext* MathGrammarParser::Bool_atomContext::comparison() {
  return getRuleContext<MathGrammarParser::ComparisonContext>(0);
}

tree::TerminalNode* MathGrammarParser::Bool_atomContext::NOT() {
  return getToken(MathGrammarParser::NOT, 0);
}

std::vector<MathGrammarParser::Opt_WSContext *> MathGrammarParser::Bool_atomContext::opt_WS() {
  return getRuleContexts<MathGrammarParser::Opt_WSContext>();
}

MathGrammarParser::Opt_WSContext* MathGrammarParser::Bool_atomContext::opt_WS(size_t i) {
  return getRuleContext<MathGrammarParser::Opt_WSContext>(i);
}

MathGrammarParser::Bool_atomContext* MathGrammarParser::Bool_atomContext::bool_atom() {
  return getRuleContext<MathGrammarParser::Bool_atomContext>(0);
}

tree::TerminalNode* MathGrammarParser::Bool_atomContext::BR_OP() {
  return getToken(MathGrammarParser::BR_OP, 0);
}

MathGrammarParser::Bool_expressionContext* MathGrammarParser::Bool_atomContext::bool_expression() {
  return getRuleContext<MathGrammarParser::Bool_expressionContext>(0);
}

tree::TerminalNode* MathGrammarParser::Bool_atomContext::BR_CL() {
  return getToken(MathGrammarParser::BR_CL, 0);
}


size_t MathGrammarParser::Bool_atomContext::getRuleIndex() const {
  return MathGrammarParser::RuleBool_atom;
}

void MathGrammarParser::Bool_atomContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBool_atom(this);
}

void MathGrammarParser::Bool_atomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBool_atom(this);
}

MathGrammarParser::Bool_atomContext* MathGrammarParser::bool_atom() {
  Bool_atomContext *_localctx = _tracker.createInstance<Bool_atomContext>(_ctx, getState());
  enterRule(_localctx, 4, MathGrammarParser::RuleBool_atom);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(61);
      dynamic_cast<Bool_atomContext *>(_localctx)->comparisonContext = comparison();
       dynamic_cast<Bool_atomContext *>(_localctx)->node =  dynamic_cast<Bool_atomContext *>(_localctx)->comparisonContext->node; 
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(64);
      match(MathGrammarParser::NOT);
      setState(65);
      opt_WS();
      setState(66);
      dynamic_cast<Bool_atomContext *>(_localctx)->bool_atomContext = bool_atom();
       dynamic_cast<Bool_atomContext *>(_localctx)->node =  new lang::OperatorNot(dynamic_cast<Bool_atomContext *>(_localctx)->bool_atomContext->node); 
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(69);
      match(MathGrammarParser::BR_OP);
      setState(70);
      opt_WS();
      setState(71);
      dynamic_cast<Bool_atomContext *>(_localctx)->bool_expressionContext = bool_expression();
      setState(72);
      opt_WS();
      setState(73);
      match(MathGrammarParser::BR_CL);
       dynamic_cast<Bool_atomContext *>(_localctx)->node =  dynamic_cast<Bool_atomContext *>(_localctx)->bool_expressionContext->node; 
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparisonContext ------------------------------------------------------------------

MathGrammarParser::ComparisonContext::ComparisonContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MathGrammarParser::Opt_WSContext *> MathGrammarParser::ComparisonContext::opt_WS() {
  return getRuleContexts<MathGrammarParser::Opt_WSContext>();
}

MathGrammarParser::Opt_WSContext* MathGrammarParser::ComparisonContext::opt_WS(size_t i) {
  return getRuleContext<MathGrammarParser::Opt_WSContext>(i);
}

tree::TerminalNode* MathGrammarParser::ComparisonContext::EQVAL() {
  return getToken(MathGrammarParser::EQVAL, 0);
}

std::vector<MathGrammarParser::Real_expressionContext *> MathGrammarParser::ComparisonContext::real_expression() {
  return getRuleContexts<MathGrammarParser::Real_expressionContext>();
}

MathGrammarParser::Real_expressionContext* MathGrammarParser::ComparisonContext::real_expression(size_t i) {
  return getRuleContext<MathGrammarParser::Real_expressionContext>(i);
}

tree::TerminalNode* MathGrammarParser::ComparisonContext::NOT_EQVAL() {
  return getToken(MathGrammarParser::NOT_EQVAL, 0);
}

tree::TerminalNode* MathGrammarParser::ComparisonContext::GREATER() {
  return getToken(MathGrammarParser::GREATER, 0);
}

tree::TerminalNode* MathGrammarParser::ComparisonContext::LESS() {
  return getToken(MathGrammarParser::LESS, 0);
}

tree::TerminalNode* MathGrammarParser::ComparisonContext::GREATER_EQ() {
  return getToken(MathGrammarParser::GREATER_EQ, 0);
}

tree::TerminalNode* MathGrammarParser::ComparisonContext::LESS_EQ() {
  return getToken(MathGrammarParser::LESS_EQ, 0);
}


size_t MathGrammarParser::ComparisonContext::getRuleIndex() const {
  return MathGrammarParser::RuleComparison;
}

void MathGrammarParser::ComparisonContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparison(this);
}

void MathGrammarParser::ComparisonContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparison(this);
}

MathGrammarParser::ComparisonContext* MathGrammarParser::comparison() {
  ComparisonContext *_localctx = _tracker.createInstance<ComparisonContext>(_ctx, getState());
  enterRule(_localctx, 6, MathGrammarParser::RuleComparison);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      dynamic_cast<ComparisonContext *>(_localctx)->left = real_expression();
      setState(79);
      opt_WS();
      setState(80);
      match(MathGrammarParser::EQVAL);
      setState(81);
      opt_WS();
      setState(82);
      dynamic_cast<ComparisonContext *>(_localctx)->right = real_expression();
       dynamic_cast<ComparisonContext *>(_localctx)->node =  new lang::Comparison(dynamic_cast<ComparisonContext *>(_localctx)->left->node, dynamic_cast<ComparisonContext *>(_localctx)->right->node, lang::CmpType::Equal); 
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(85);
      dynamic_cast<ComparisonContext *>(_localctx)->left = real_expression();
      setState(86);
      opt_WS();
      setState(87);
      match(MathGrammarParser::NOT_EQVAL);
      setState(88);
      opt_WS();
      setState(89);
      dynamic_cast<ComparisonContext *>(_localctx)->right = real_expression();
       dynamic_cast<ComparisonContext *>(_localctx)->node =  new lang::Comparison(dynamic_cast<ComparisonContext *>(_localctx)->left->node, dynamic_cast<ComparisonContext *>(_localctx)->right->node, lang::CmpType::NotEqual); 
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(92);
      dynamic_cast<ComparisonContext *>(_localctx)->left = real_expression();
      setState(93);
      opt_WS();
      setState(94);
      match(MathGrammarParser::GREATER);
      setState(95);
      opt_WS();
      setState(96);
      dynamic_cast<ComparisonContext *>(_localctx)->right = real_expression();
       dynamic_cast<ComparisonContext *>(_localctx)->node =  new lang::Comparison(dynamic_cast<ComparisonContext *>(_localctx)->left->node, dynamic_cast<ComparisonContext *>(_localctx)->right->node, lang::CmpType::Greater); 
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(99);
      dynamic_cast<ComparisonContext *>(_localctx)->left = real_expression();
      setState(100);
      opt_WS();
      setState(101);
      match(MathGrammarParser::LESS);
      setState(102);
      opt_WS();
      setState(103);
      dynamic_cast<ComparisonContext *>(_localctx)->right = real_expression();
       dynamic_cast<ComparisonContext *>(_localctx)->node =  new lang::Comparison(dynamic_cast<ComparisonContext *>(_localctx)->left->node, dynamic_cast<ComparisonContext *>(_localctx)->right->node, lang::CmpType::Less); 
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(106);
      dynamic_cast<ComparisonContext *>(_localctx)->left = real_expression();
      setState(107);
      opt_WS();
      setState(108);
      match(MathGrammarParser::GREATER_EQ);
      setState(109);
      opt_WS();
      setState(110);
      dynamic_cast<ComparisonContext *>(_localctx)->right = real_expression();
       dynamic_cast<ComparisonContext *>(_localctx)->node =  new lang::Comparison(dynamic_cast<ComparisonContext *>(_localctx)->left->node, dynamic_cast<ComparisonContext *>(_localctx)->right->node, lang::CmpType::GreaterOrEqual); 
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(113);
      dynamic_cast<ComparisonContext *>(_localctx)->left = real_expression();
      setState(114);
      opt_WS();
      setState(115);
      match(MathGrammarParser::LESS_EQ);
      setState(116);
      opt_WS();
      setState(117);
      dynamic_cast<ComparisonContext *>(_localctx)->right = real_expression();
       dynamic_cast<ComparisonContext *>(_localctx)->node =  new lang::Comparison(dynamic_cast<ComparisonContext *>(_localctx)->left->node, dynamic_cast<ComparisonContext *>(_localctx)->right->node, lang::CmpType::LessOrEqual); 
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_exprContext ------------------------------------------------------------------

MathGrammarParser::If_exprContext::If_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MathGrammarParser::If_exprContext::IF() {
  return getTokens(MathGrammarParser::IF);
}

tree::TerminalNode* MathGrammarParser::If_exprContext::IF(size_t i) {
  return getToken(MathGrammarParser::IF, i);
}

std::vector<MathGrammarParser::Opt_WSContext *> MathGrammarParser::If_exprContext::opt_WS() {
  return getRuleContexts<MathGrammarParser::Opt_WSContext>();
}

MathGrammarParser::Opt_WSContext* MathGrammarParser::If_exprContext::opt_WS(size_t i) {
  return getRuleContext<MathGrammarParser::Opt_WSContext>(i);
}

std::vector<tree::TerminalNode *> MathGrammarParser::If_exprContext::BR_OP() {
  return getTokens(MathGrammarParser::BR_OP);
}

tree::TerminalNode* MathGrammarParser::If_exprContext::BR_OP(size_t i) {
  return getToken(MathGrammarParser::BR_OP, i);
}

std::vector<tree::TerminalNode *> MathGrammarParser::If_exprContext::BR_CL() {
  return getTokens(MathGrammarParser::BR_CL);
}

tree::TerminalNode* MathGrammarParser::If_exprContext::BR_CL(size_t i) {
  return getToken(MathGrammarParser::BR_CL, i);
}

std::vector<tree::TerminalNode *> MathGrammarParser::If_exprContext::ELSE() {
  return getTokens(MathGrammarParser::ELSE);
}

tree::TerminalNode* MathGrammarParser::If_exprContext::ELSE(size_t i) {
  return getToken(MathGrammarParser::ELSE, i);
}

tree::TerminalNode* MathGrammarParser::If_exprContext::SEMIC() {
  return getToken(MathGrammarParser::SEMIC, 0);
}

std::vector<MathGrammarParser::Bool_expressionContext *> MathGrammarParser::If_exprContext::bool_expression() {
  return getRuleContexts<MathGrammarParser::Bool_expressionContext>();
}

MathGrammarParser::Bool_expressionContext* MathGrammarParser::If_exprContext::bool_expression(size_t i) {
  return getRuleContext<MathGrammarParser::Bool_expressionContext>(i);
}

std::vector<MathGrammarParser::Real_expressionContext *> MathGrammarParser::If_exprContext::real_expression() {
  return getRuleContexts<MathGrammarParser::Real_expressionContext>();
}

MathGrammarParser::Real_expressionContext* MathGrammarParser::If_exprContext::real_expression(size_t i) {
  return getRuleContext<MathGrammarParser::Real_expressionContext>(i);
}

std::vector<tree::TerminalNode *> MathGrammarParser::If_exprContext::WS() {
  return getTokens(MathGrammarParser::WS);
}

tree::TerminalNode* MathGrammarParser::If_exprContext::WS(size_t i) {
  return getToken(MathGrammarParser::WS, i);
}


size_t MathGrammarParser::If_exprContext::getRuleIndex() const {
  return MathGrammarParser::RuleIf_expr;
}

void MathGrammarParser::If_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_expr(this);
}

void MathGrammarParser::If_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MathGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_expr(this);
}

MathGrammarParser::If_exprContext* MathGrammarParser::if_expr() {
  If_exprContext *_localctx = _tracker.createInstance<If_exprContext>(_ctx, getState());
  enterRule(_localctx, 8, MathGrammarParser::RuleIf_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(MathGrammarParser::IF);
    setState(123);
    opt_WS();
    setState(124);
    match(MathGrammarParser::BR_OP);
    setState(125);
    opt_WS();
    setState(126);
    dynamic_cast<If_exprContext *>(_localctx)->expr1 = bool_expression();
    setState(127);
    opt_WS();
    setState(128);
    match(MathGrammarParser::BR_CL);
    setState(129);
    opt_WS();
    setState(130);
    dynamic_cast<If_exprContext *>(_localctx)->exec1 = real_expression();
     dynamic_cast<If_exprContext *>(_localctx)->node =  new lang::OperatorIf(); _localctx->node->AddElseIf(dynamic_cast<If_exprContext *>(_localctx)->expr1->node, dynamic_cast<If_exprContext *>(_localctx)->exec1->node); 
    setState(148);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(132);
        opt_WS();
        setState(133);
        match(MathGrammarParser::ELSE);
        setState(134);
        match(MathGrammarParser::WS);
        setState(135);
        match(MathGrammarParser::IF);
        setState(136);
        opt_WS();
        setState(137);
        match(MathGrammarParser::BR_OP);
        setState(138);
        opt_WS();
        setState(139);
        dynamic_cast<If_exprContext *>(_localctx)->expr_next = bool_expression();
        setState(140);
        opt_WS();
        setState(141);
        match(MathGrammarParser::BR_CL);
        setState(142);
        opt_WS();
        setState(143);
        dynamic_cast<If_exprContext *>(_localctx)->exec_next = real_expression();
         _localctx->node->AddElseIf(dynamic_cast<If_exprContext *>(_localctx)->expr_next->node, dynamic_cast<If_exprContext *>(_localctx)->exec_next->node);  
      }
      setState(150);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
    setState(151);
    opt_WS();
    setState(152);
    match(MathGrammarParser::ELSE);
    setState(153);
    opt_WS();
    setState(154);
    dynamic_cast<If_exprContext *>(_localctx)->last = real_expression();
    setState(155);
    opt_WS();
    setState(156);
    match(MathGrammarParser::SEMIC);
     _localctx->node->AddElse(dynamic_cast<If_exprContext *>(_localctx)->last->node); 
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Real_expressionContext ------------------------------------------------------------------

MathGrammarParser::Real_expressionContext::Real_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MathGrammarParser::Add_exprContext* MathGrammarParser::Real_expressionContext::add_expr() {
  return getRuleContext<MathGrammarParser::Add_exprContext>(0);
}

